# makani

./: .dockerignore  .gitignore  docker-compose.yml  pyproject.toml  test_fcn3_forward.py  test_fcn3_realdata.py
config/: fourcastnet3.yaml
data_process/: Readme.md  convert_makani_output_to_wb2.py  convert_wb2_to_makani_input.py  data_process_helpers.py  generate_wb2_climatology.py  get_histograms.py  get_spectra.py  get_stats.py  wb2_helpers.py
datasets/copernicus/: get_data.py
docker/: Dockerfile  build.sh
makani/: ensemble.py  inference.py  train.py  train_autoencoder.py  train_stochastic.py
makani/models/: model_package.py  model_registry.py  preprocessor.py  preprocessor_helpers.py
makani/models/networks/: fourcastnet3.py  sfnonet.py
makani/mpu/: fft.py  helpers.py  mappings.py
makani/utils/: argument_parser.py  dataloader.py  driver.py  grids.py  loss.py  metric.py  visualize.py
makani/utils/dataloaders/: dali_es_helper_2d.py  dali_es_helper_concat_2d.py  data_helpers.py  data_loader_dali_2d.py  data_loader_dummy.py  data_loader_multifiles.py
makani/utils/inference/: helpers.py  inferencer.py  rollout_buffer.py
makani/utils/losses/: crps_loss.py  likelihood_loss.py  mmd_loss.py
makani/utils/metrics/: base_metric.py  functions.py
makani/utils/training/: autoencoder_trainer.py  deterministic_trainer.py  ensemble_trainer.py  stochastic_trainer.py  training_helpers.py
slurm/: convert_rollouts.sbatch  docker-common.sh  inference.sbatch  run_inference.sh  training.sbatch
tests/: test_constraints.py  test_crop_helpers.py  test_data_process.py  test_dataloader.py  test_layers.py  test_losses.py  test_metrics.py  test_models.py  test_rollout_buffers.py  test_save_restore.py  test_trainers.py  testutils.py
tests/distributed/: distributed_helpers.py  tests_distributed_fft.py  tests_distributed_layers.py  tests_distributed_losses.py  tests_distributed_metrics.py  tests_distributed_model.py
