[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "makani"
authors = [
    { name="Thorsten Kurth", email = "tkurth@nvidia.com" },
    { name="Boris Bonev", email = "bbonev@nvidia.com" },
    { name="Ankur Mahesh", email = "amahesh@lbl.gov" },
    { name="Animashree Anandkumar" },
    { name="Kamyar Azizzadenesheli" },
    { name="Noah Brenowitz" },
    { name="Ashesh Chattopadhyay" },
    { name="Yair Cohen" },
    { name="Franziska Gerken", email = "fgerken@nvidia.com"},
    { name="David Hall" },
    { name="Peter Harrington" },
    { name="Pedram Hassanzadeh" },
    { name="Christian Hundt" },
    { name="Alexey Kamenev"},
    { name="Karthik Kashinath" },
    { name="Jean Kossaifi", email = "jkossaifi@nvidia.com" },
    { name="Zongyi Li" },
    { name="Morteza Mardani" },
    { name="Jaideep Pathak" },
    { name="Mike Pritchard" },
    { name="David Pruitt" },
    { name="Sanjeev Raja" },
    { name="Shashank Subramanian" },
]

maintainers = [
    { name="Thorsten Kurth", email = "tkurth@nvidia.com" },
    { name="Boris Bonev", email = "bbonev@nvidia.com" },
    { name="Franziska Gerken", email = "fgerken@nvidia.com" },
]

description = "Massively parallel training of machine-learning based weather and climate models"
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Development Status :: Alpha",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dynamic = ["version"]

dependencies = [
    "torch>=2.4.0",
    "numpy>=1.22.4",
    "h5py>=3.11.0",
    "nvidia-physicsnemo>=0.5.0a0",
    "wandb>=0.13.7",
    "numba>=0.60.0",
    "tqdm>=4.60.0",
    "pynvml>=10.0.0",
    "jsbeautifier",
    "more-itertools",
    "importlib-metadata",
]

[tool.setuptools.dynamic]
version = {attr = "makani.__version__"}

[tool.setuptools.packages.find]
    include = ["makani*"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=22.10.0",
    "coverage>=6.5.0",
    "nvidia_dali_cuda110>=1.16.0",
]

vis = [
    "matplotlib>=3.8.1",
    "imageio>=2.28.1",
    "moviepy>=1.0.3",
]

sirfshampoo = [
    "sirfshampoo",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ""
testpaths = [
    "tests",
    "makani",
]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
omit = [
    "makani/ensemble.py",
    "makani/inference.py",
    "makani/train.py",
    "makani/train_autoencoder.py",
    "makani/train_stochastic.py",
    "makani/utils/argument_parser.py",
]

[project.entry-points."makani.models"]
AFNO     = "makani.models.networks.afnonet:AdaptiveFourierNeuralOperatorNet"
AFNOv2   = "makani.models.networks.afnonet_v2:AdaptiveFourierNeuralOperatorNet"
FCN3     = "makani.models.networks.fourcastnet3:AtmoSphericNeuralOperatorNet"
FNO      = "makani.models.networks.sfnonet:FourierNeuralOperatorNet"
SFNO     = "makani.models.networks.sfnonet:SphericalFourierNeuralOperatorNet"
SNO      = "makani.models.networks.snonet:SphericalNeuralOperatorNet"
DebugNet = "makani.models.networks.debug:DebugNet"
ViT      = "makani.models.networks.vit:VisionTransformer"
Pangu    = "makani.models.networks.pangu:Pangu"

[project.entry-points."physicsnemo.models"]
SFNO     = "makani.models.networks.sfnonet:SFNO"
FCN3     = "makani.models.networks.fourcastnet3:FCN3"

[tool.pixi.workspace]
channels = ["nvidia", "pytorch", "conda-forge"]
platforms = ["linux-aarch64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.13"
"ruamel.yaml" = "*"
uv = "*"
pip = "*"
mpi4py = ">=4.1.1,<5"
progressbar2 = "*"
numba = ">=0.60.0"

[tool.pixi.pypi-dependencies]
makani = { path = ".", editable = true }
torch = { version = ">=2.4.0", index = "https://download.pytorch.org/whl/cu130" }
moviepy = ">=2.0"

[tool.pixi.environments]
default = { solve-group = "default" }
data = { features = ["data"], solve-group = "default" }
eval = { features = ["benchmark", "scoring"], solve-group = "default" }
onnx = { features = ["onnx"], solve-group = "default" }
full = { features = ["data", "benchmark", "scoring", "onnx", "vis"], solve-group = "default" }

[tool.pixi.tasks]
build-torch-harmonics = { cmd = "pip install --no-build-isolation --no-deps --no-cache-dir torch-harmonics==0.8.0", env = { FORCE_CUDA_EXTENSION = "1", TORCH_CUDA_ARCH_LIST = "12.1", MAX_JOBS = "16" } }

# data feature - ERA5 download & conversion with MPI-enabled HDF5
[tool.pixi.feature.data.dependencies]
zarr = "*"
xarray = "*"
pandas = "*"
hdf5 = { version = ">=1.14.0", build = "mpi_openmpi*" }
h5py = { version = ">=3.13.0", build = "mpi_openmpi*" }
openmpi = "*"

[tool.pixi.feature.data.pypi-dependencies]
cdsapi = ">=0.7.2"
boto3 = "*"
gcsfs = ">=2025.10.0"

# scoring feature - forecast evaluation metrics
[tool.pixi.feature.scoring.pypi-dependencies]
xskillscore = "*"
properscoring = "*"

# benchmark feature - performance measurement
[tool.pixi.feature.benchmark.pypi-dependencies]
benchy = { git = "https://github.com/romerojosh/benchy.git" }
mlperf-common = { git = "https://github.com/NVIDIA/mlperf-common.git" }

# onnx feature - model export
[tool.pixi.feature.onnx.pypi-dependencies]
onnx = "*"
onnxruntime = "*"
